--- a/src/components/cards/index.css
+++ b/src/components/cards/index.css
@@ -14,7 +14,7 @@ p {
   flex-direction: column;
   width: 15%;
   min-width: 220px;
-  height: auto;
+  height: 410px;
   margin: 30px 10px;
   cursor: pointer;
   background-color: #fff;
@@ -25,28 +25,33 @@ p {
     box-shadow: 0 2px 20px rgb(0 0 0 / 60%);
   } */
 h3 {
-  margin-top: 10px;
+
   margin-left: 5px;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bolder;
   letter-spacing: 0.5px;
   color: rgb(27, 25, 25);
 }
 h4 {
-  margin-left: 5px;
-  margin-top: 10px;
+  
   text-align: left;
-  font-size: 12px;
+  font-size: 10px;
   color: rgb(110, 110, 110);
 }
 h5 {
-  margin-left: 5px;
-  margin-top: 10px;
+  
   text-align: left;
   font-size: 15px;
   letter-spacing: 2px;
   color: #009688;
   margin-bottom: 20px;
+}
+.details{
+  padding: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .clothing,
 .accessories {
@@ -153,4 +158,9 @@ Link {
   background-color: #fff;
   box-shadow: 0 2px 10px rgb(0 0 0 / 30%);
   cursor: pointer;
+}
+@media only screen and (max-width:768px) {
+  .card{
+    width: 90vw;
+  }
 }
