--- a/src/components/carousal/index.css
+++ b/src/components/carousal/index.css
@@ -10,3 +10,15 @@
   width: 100%;
   height: 300px;
 }
+@media only screen and (max-width: 768px) {
+.carousel{
+  width: 80vw;
+}
+.slider-img {
+  width: 80vw;
+}
+.slick-slider{
+  position: relative;
+}
+
+}
