--- a/src/components/navbar/index.css
+++ b/src/components/navbar/index.css
@@ -120,8 +120,12 @@ h2 {
   font-weight: light;
 }
 @media only screen and (max-width: 768px) {
+  #topbar{
+    width: 90vw;
+    padding: 8px 4%;
+  }
   #left-menu {
-    width: 100vw;
+    width: 90vw;
   }
   #search-wrapper {
     display: none;
