--- a/src/components/cards/index.css
+++ b/src/components/cards/index.css
@@ -1,8 +1,8 @@
-.card {
+.cards {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+ flex-wrap: wrap;
 }
 
 p {
