--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -1,4 +1,5 @@
 body {
+  height: 100vh;
   margin: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
@@ -11,49 +12,39 @@ body {
 }
 .mainImage {
   width: 400px;
+  height: 70vh;
   margin-top: 50px;
 }
 .left {
   margin-right: 3%;
 }
-
-.pImage1,
-.pImage2,
-.pImage3,
-.pImage4,
-.pImage0 {
-  box-sizing: border-box;
-  margin: 5px;
-  width: 15%;
-  height: 30%;
-  cursor: pointer;
-  padding: 4px;
-  border-radius: 6px;
-}
-.pImageActive {
-  border: 2px solid #009688;
+.right {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
   font-size: 44px;
-
 }
 h4 {
+  text-align: left;
   font-family: "Montserrat", sans-serif;
   margin-top: 20px;
-  margin-left: 1rem;
+
   font-size: 20px;
-  
+
   color: rgb(27, 25, 25);
 }
 h3 {
   font-family: "Montserrat", sans-serif;
-  padding-left: 0.5rem;
+margin-top: 0.1rem;
   font-weight: 200;
   font-size: 16px;
-  
+
   color: rgb(27, 25, 25);
 }
 p {
@@ -66,7 +57,7 @@ button {
   font-size: 1rem;
   font-weight: bold;
   padding: 1.5rem;
-  margin: 1rem;
+  margin-right: 1rem;
   height: 2rem;
   display: inline-block;
   padding: 0.3em 1em;
@@ -98,7 +89,10 @@ button:hover {
   h1 {
     font-size: 20px;
   }
-  h3,
+  h3{
+    font-size: 10px;
+    margin-top: 1rem;
+  }
   h4 {
     font-size: 10px;
   }
