--- a/src/components/card/index.css
+++ b/src/components/card/index.css
@@ -11,9 +11,9 @@ body {
   justify-content: space-around;
 }
 .mainImage {
-  width: 400px;
-  height: 70vh;
-  margin-top: 50px;
+  height: 100%;
+  width: 350px;
+  margin-top: 2rem;
 }
 .left {
   margin-right: 3%;
@@ -28,7 +28,7 @@ body {
 h1 {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
-  font-size: 44px;
+  font-size: 36px;
 }
 h4 {
   text-align: left;
@@ -48,6 +48,7 @@ margin-top: 0.1rem;
   color: rgb(27, 25, 25);
 }
 p {
+  width: 100%;
   margin-top: 20px;
   font-size: 16px;
   font-weight: 300;
